@@ -3,7 +3,6 @@
 exit-in-shared-library
 hardening-no-bindnow
 hardening-no-fortify-functions
-[!arm64]: hardening-no-relro
 
 # Packages built against the NVIDIA libEGL should declare dependencies on
 # the free version for Debian's purposes.
