@@ -2,7 +2,6 @@
 [i386]: binary-file-built-without-LFS-support
 hardening-no-bindnow
 hardening-no-fortify-functions
-[!arm64]: hardening-no-relro
 
 # Packages built against the NVIDIA libGL should declare dependencies on
 # the free version for Debian's purposes.
