@@ -4,7 +4,6 @@ exit-in-shared-library
 [i386]: specific-address-in-shared-library
 hardening-no-bindnow
 hardening-no-fortify-functions
-[!arm64]: hardening-no-relro
 
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
