@@ -3,7 +3,6 @@
 exit-in-shared-library
 hardening-no-bindnow
 hardening-no-fortify-functions
-[!arm64]: hardening-no-relro
 
 # This is also built from src:libglvnd.
 package-name-doesnt-match-sonames libGLX0
