@@ -3,7 +3,6 @@
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
-[ppc64el]: hardening-no-relro
 
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
