@@ -1,8 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: binary-file-built-without-LFS-support
 hardening-no-bindnow
 hardening-no-fortify-functions
-[!arm64]: hardening-no-relro
 [i386]: specific-address-in-shared-library
 
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
