@@ -2,7 +2,6 @@
 [i386]: binary-file-built-without-LFS-support
 hardening-no-bindnow
 hardening-no-fortify-functions
-[!arm64]: hardening-no-relro
 
 # This is also built from src:libglvnd.
 package-name-doesnt-match-sonames libOpenGL0
