@@ -3,7 +3,6 @@ embedded-library usr/lib/#PRIVATE#/nvidia-debugdump: zlib
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-pie
-[!arm64]: hardening-no-relro
 
 # The current setup involving multiple chained alternatives would be very
 # hard to migrate to /usr/libexec.
