@@ -79,6 +79,7 @@ nvidia-graphics-drivers (460.27.04-1) UNRELEASED; urgency=medium
   * nvidia-libopencl1 now supports up to OpenCL 3.0.
   * libcuda1: Add Provides: libcuda-11.2-1{,-i386}.
   * nvidia-driver-bin: Ship nvidia-powerd [amd64].
+  * Update lintian overrides.
 
   [ Luca Boccassi ]
   * Update location and license (zlib/libpng) of supported-gpus.json.
